Closed Bug 116511 Opened 23 years ago Closed 23 years ago

element.offset* incorrect for relatively positioned elements inside table, td, and th

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla0.9.8

People

(Reporter: caillon, Assigned: jst)

References

()

Details

(Whiteboard: [HAVE FIX])

Attachments

(3 files)

On AIM.com the menus in the top left are positioned badly.

I'm filing this as critical because it prevents me from downloading AIM at all
while using Mozilla 2001122108.  There seems to be no other way to get to the
downloads area without the menus.

I am assuming that they are using old offset code before ours got fixed, but
haven't looked at the code extensively.

For reference, see bug 90617 and bug 81290.
DOM 0
Assignee: bclary → jst
Component: English: US → DOM Level 0
Product: Tech Evangelism → Browser
QA Contact: zach → desale
Version: unspecified → other
Attached file testcase
Oh nice, the reason for this is that the .offsetParent of the DIV that's shown
is the BODY in IE, and in mozilla it's the closest TD, as it IMO should be in IE
too.

Does anyone have any ideas why the .offsetParent of the submenu DIV element is
the BODY in IE in this case?
The reason the .offsetParent is the BODY in IE is that the DIV in question is
relatively positioned. Patch coming up.
Severity: critical → normal
Status: NEW → ASSIGNED
OS: Linux → All
Priority: -- → P2
Hardware: PC → All
Whiteboard: [HAVE FIX]
Target Milestone: --- → mozilla0.9.8
Comment on attachment 62612 [details] [diff] [review]
Proposed fix, and also eliminate some extra string copying

r=fabian
Attachment #62612 - Flags: review+
*** Bug 117455 has been marked as a duplicate of this bug. ***
Summary: aim.com - menus positioned badly, can't "Get AIM" → element.offset* incorrect for relatively positioned elements inside table, td, and th
*** Bug 116028 has been marked as a duplicate of this bug. ***
Comment on attachment 62612 [details] [diff] [review]
Proposed fix, and also eliminate some extra string copying

sr=vidur
Attachment #62612 - Flags: superreview+
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: