Fixing bug 116511. Make element.offset* always be relative to the body if the element is relatively positioned. r=hidday@geocities.com, sr=vidur@netscape.com